# 030.fastapi-kgf-service

./: docker-compose.yaml  pyproject.toml  ruff.toml
fastapi-kgf-service/: .env_template  app_lifespan.py  lifespan.py  main.py
fastapi-kgf-service/alembic/: env.py
fastapi-kgf-service/alembic/versions/: 2026_06_30_1406-81017fbeb269_create_tables.py  2026_06_30_1410-ed8750d8eebe_create_users_table.py
fastapi-kgf-service/core/: config.py
fastapi-kgf-service/core/models/: __init__.py  db_helper.py  program.py  user.py
fastapi-kgf-service/core/models/mixin/: __init__.py  int_id_pk.py
fastapi-kgf-service/core/schemas/: __init__.py  user.py
fastapi-kgf-service/dependencies/: auth_user.py
fastapi-kgf-service/rest/: __init__.py  home.py
fastapi-kgf-service/rest/auth/: __init__.py  login_page.py
fastapi-kgf-service/rest/programs/: __init__.py  programs_page.py
fastapi-kgf-service/storage/db/user/: crud.py
fastapi-kgf-service/storage/programs/: crud.py
fastapi-kgf-service/storage/redis/auth/: crud.py
fastapi-kgf-service/templates/: base.html  home.html  login.html  programs.html
fastapi-kgf-service/templates/macro/: footer.html  navbar.html
fastapi-kgf-service/utils/: hash_password.py
