[project]
name = "030-fastapi-kgf-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.138.0",
    "mypy>=2.1.0",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.18",
    "sqladmin>=0.27.2",
    "sqlalchemy>=2.0.51",
]
